tests/sksl/errors/VoidConstructor.glsl
### Compilation failed:

error: 2: cannot construct 'void'
    void();
    ^^^^^^
1 error
